# llm-chain

./: Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: tests.yaml
examples/: chains.ipynb  conversation-between-models.ipynb  copy.ipynb  duckduckgo-web-search.ipynb  getting_started.ipynb  indexes.ipynb  memory.ipynb  notebook_helpers.py  openai_chat.ipynb  prompt_templates.ipynb  sandbox.ipynb  scraping-urls.ipynb  search-stack-overflow.ipynb  splitting-documents.ipynb  tools.ipynb
llm_chain/: base.py  chains.py  indexes.py  links.py  memory.py  models.py  prompt_templates.py  resources.py  tools.py  utilities.py
llm_chain/vector_db/: chroma.py
tests/: conftest.py  test_chains.py  test_chroma.py  test_history.py  test_indexes.py  test_link.py  test_links.py  test_memory.py  test_models.py  test_prompt_templates.py  test_records.py  test_session.py  test_tools.py  test_utilities.py
