[metadata]
name = llm-chain
version = 0.0.12
author = Shane Kercheval
author_email = shane.kercheval@gmail.com
description = Simple and extensible LLM Chaining
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shane-kercheval/llm-chain
project_urls =
    Bug Tracker = https://github.com/shane-kercheval/llm-chain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.10
install_requires =
    beautifulsoup4
    chromadb
    duckduckgo-search
    markdownify
    numpy
    pydantic
    tenacity
    tiktoken
